--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,9 @@
     <string name="enter_guess">Enter guess</string>
     <string name="input_text">Input text</string>
     <string name="word">Word: %s</string>
+    <string name="submit">Submit</string>
+    <string name="challenge">Challenge</string>
+    <string name="outcome">Outcome</string>
+    <string name="IntendedWord">Intended word</string>
+    <string name="checkButton">CHECK</string>
 </resources>
