--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="outcome">Outcome</string>
     <string name="IntendedWord">Intended word</string>
     <string name="checkButton">CHECK</string>
+    <string name="newGameButton">New Game</string>
 </resources>
